# example_library

./: CMakeLists.txt  README.md
include/: SimpleLogger.hpp
src/: SimpleLogger.cpp
